# chat-assistant

./: about.html  config.html  package-lock.json  package.json  toast.html  toolbox.html  vite.config.js
src/: Config.vue  Toast.vue  Toolbox.vue  toolbox.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auto.rs  conf.rs  main.rs
