[package]
edition = "2021"
version = "1.0.0"
name = "chat-assistant"
authors = ["Luckin Peng"]
description = "瓜皮助手-微信智能聊天小帮手"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
windows = {version = "0.52.0", features = ["Win32_UI", "Win32_Foundation", "Win32_Security", "Win32_System", "Win32_System_Threading", "Win32_UI_Accessibility", "Win32_UI_WindowsAndMessaging"] }
tauri = { version = "1.5", features = [ "system-tray", "window-all", "dialog-all", "global-shortcut-all", "clipboard-all", "shell-open"] }
reqwest = { version = "^0.11", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] }
uiautomation = { path = "crates/uiautomation" }
window-vibrancy = "0.4.3"
serde_json = "1.0"
clipboard = "0.5"
tokio = "1.36.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
